# LPSE-X

./: .gitignore  AGENTS.md  DEEP_RESEARCH_SYNTHESIS.md  LPSE-X_Architecture.md  LPSE-X_Proposal_v3.txt  lkpp_lpse_data.xlsx  lkpp_monitoring.xlsx  lkpp_sirup.xlsx  lkpp_tender_winners.xlsx  opencode.json  test_pyproc_local.py
lpse-x/: .env.example  .gitignore  CHackthon.sisyphusevidencetask-4-injection-validation.txt  Makefile  README.md  pyproject.toml  start_lpse_x.py
lpse-x/.sisyphus/evidence/: task-10-xai-oracle-sandwich.txt  task-11-onnx-parity.txt  task-12-dice-counterfactual.txt  task-13-reports-iia.txt  task-14-api-routes.txt  task-15-dashboard-happy.txt  task-15-features-benford.txt  task-16-shap-summary.txt  (+25 more)
lpse-x/backend/: main.py
lpse-x/config/: runtime_config.yaml
lpse-x/docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  SPRINT_PLAYBOOK.md  TALKING_POINTS.md
lpse-x/frontend/: CHackthon.sisyphusnotepadslpse-x-buildlearnings.md  build-output.txt  build-output2.txt  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
lpse-x/models/: iforest.json  iforest.onnx  iforest.pkl  training_metrics.json  xgb_best_params.json  xgboost.onnx  xgboost.onnx.json  xgboost.ubj
lpse-x/scripts/: batch_predict.py  generate_reports.py  seed_cobidding.py
lpse-x/tests/: conftest.py  test_api.py  test_benford.py  test_dice_explainer.py  test_features.py  test_graph.py  test_injection_stress.py  test_integration.py  test_models.py  test_offline_no_network.py  test_onnx.py  test_reports.py  test_tenders_api.py  test_xai.py
(+90 files in other folders)
