[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lpse-x"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "pyyaml==6.0.2",
    "aiosqlite==0.20.0",
    "httpx==0.28.1",
    "xgboost==2.1.3",
    "scikit-learn==1.6.0",
    "onnxruntime==1.20.1",
    "onnx==1.17.0",
    "skl2onnx==1.17.0",
    "shap==0.46.0",
    "dice-ml==0.11",
    "alibi==0.9.6",
    "benford-py==0.2.1",
    "networkx==3.4.2",
    "leidenalg==0.10.2",
    "igraph==0.11.8",
    "plotly==5.24.1",
    "folium==0.18.0",
    "jinja2==3.1.5",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "scipy==1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
